# amaris-plugin

./: .audit-allowlist.json  .copier-answers.yml  .env.example  .mcp.json  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agents/: mcp.json
.claude-plugin/: plugin.json
companies/amaris/: .brand-sync-version.json  amaris-client-data-overview.xlsx  assets.json  boilerplate.json  brand_context.json  charter.json  charter.provenance.json  company_context.json  guidelines.md  people.json  profile.json  tokens.css  workspace.json
companies/amaris/images/: manifest.json
skills/brand-artifact-builder/: SKILL.md
skills/brand-artifact-builder/agents/: openai.yaml
skills/brand-artifact-builder/references/: downstream-handoffs.md  output-contract.md
skills/brand-builder/: SKILL.md
skills/brand-builder/assets/: tokens-template.css
skills/brand-builder/references/: brand-book.md  brand-maintenance.md  brand-strategy.md  build-log-template.md  design-system.md  imagery.md  templates.md  visual-identity.md
skills/brand-builder/scripts/: build-brand-book.py  build-phase5-pilot.js  check-font-collision.py  inject-theme.js  personality-from-archetype.js
skills/brand-intelligence/: SKILL.md
skills/brand-intelligence/references/: extraction-methods.md  failure-modes.md  handoff-contract.md  (+1 more)
skills/diagram/: SKILL.md
skills/docx/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/pptx-hd/: SKILL.md
skills/website-builder/: SKILL.md
skills/xlsx/: SKILL.md
src/: image-utils.js  workspace.js  workspace.py
(+45 files in other folders)
